--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["Kseniia Kornilova <ksyu.kornilova2809@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-django = "^5.0.7"
+python = "^3.12"
+psycopg2 = "^2.9.9"
+django = "^4.2.0"
+pillow = "^10.4.0"
 
 
 [build-system]
