--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ psycopg2 = "^2.9.9"
 django = "^4.2.0"
 pillow = "^10.4.0"
 django-bootstrap4 = "^24.3"
+celery = "^5.4.0"
+flower = "^2.0.1"
 
 
 [build-system]
